force-app/main/default/objects/Course__c/fields/CourseTitle__c.field-meta.xml
<CustomField>
    <fullName>CourseTitle__c</fullName>
    <label>CourseTitle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>