force-app/main/default/objects/Course__c/fields/Subjects__c.field-meta.xml
<CustomField>
    <fullName>Subjects__c</fullName>
    <label>Subjects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web Development(html,css,js,bootstrap,jquery)</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>java</fullName>
            </value>
            <value>
                <fullName>php</fullName>
            </value>
            <value>
                <fullName>python</fullName>
            </value>
            <value>
                <fullName>computer fundamental</fullName>
            </value>
            <value>
                <fullName>salesforce(admin,developer)</fullName>
            </value>
            <value>
                <fullName>data structure and alogrithm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>