force-app/main/default/objects/Course__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BCA</fullName>
            </value>
            <value>
                <fullName>BSCIT</fullName>
            </value>
            <value>
                <fullName>ICST</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>MSCIT</fullName>
            </value>
            <value>
                <fullName>RSCIT</fullName>
            </value>
            <value>
                <fullName>Short term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>