force-app/main/default/objects/Course__c/validationRules/CourseTitle_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>CourseTitle_rules</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( CourseTitle__c )</errorConditionFormula>
    <errorDisplayField>CourseTitle__c</errorDisplayField>
    <errorMessage>Course Title Required</errorMessage>
</ValidationRule>