force-app/main/default/objects/Course__c/validationRules/Duration_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Duration_rules</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK(Duration__c ),Duration__c &gt; 48 ,Duration__c &lt; 6 )</errorConditionFormula>
    <errorDisplayField>Duration__c</errorDisplayField>
    <errorMessage>Duration is  requried,  and must be in range of 6 to 48.</errorMessage>
</ValidationRule>