force-app/main/default/objects/Course__c/validationRules/Fees_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Fees_rules</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISBLANK(Fees__c ) ,Fees__c &lt; 5000, Fees__c &gt; 500000 )</errorConditionFormula>
    <errorDisplayField>CourseTitle__c</errorDisplayField>
    <errorMessage>Fees is also be requried and must be in range 5000 to 500000.</errorMessage>
</ValidationRule>