force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CourseTitle__c</columns>
    <columns>Subjects__c</columns>
    <columns>Type__c</columns>
    <columns>Fees__c</columns>
    <columns>Duration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>